--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
 <a name="theoretical-analysis-based" class="anchor" href="#theoretical-analysis-based"><span class="octicon octicon-link"></span></a>Theoretical Analysis based:</h3>
 
 <ul>
-<li>
-<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5935152&amp;tag=1">Hyunseok Chang, Murali Kodianlam, "Scheduling in MapReduce-like Systems for Fast completion time," in Infocom 2011.</a>
-This paper seeks to optimize the total completion time of job running in the Mapreduce system.</li>
+<li><p><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5935152&amp;tag=1">Hyunseok Chang, Murali Kodialam, Ramana Rao Kompella, T. V. Lakshman, Myungjin Lee, Sarit Mukherjee, "Scheduling in MapReduce-like Systems for Fast completion time," in Infocom 2011.</a>
+This paper seeks to optimize the total completion time of job running in the Mapreduce system. It decides the scheduling order of tasks on each processor. Moreover, this paper doesn't consider the dependency between map task and reduce tasks. A linear program is formulated to relax the original problem. It then outlines a combinatorial approach to solve the LP problem.</p></li>
+<li><p><a href="http://www.cse.psu.edu/%7Efachen/pubs/infocom12mr.pdf">F. Chen, M. Kodialam, and T. Lakshman, “Joint scheduling of processing
+and shuffle phases in MapReduce systems,” in Infocom 2012.</a> 
+Actually this paper is the follow-up work of the above paper. To be more practical, it considers the dependency between map and reduce tasks. </p></li>
 </ul><h2>
 <a name="data-locality" class="anchor" href="#data-locality"><span class="octicon octicon-link"></span></a>Data locality</h2>
 
@@ -69,7 +71,7 @@ This paper seeks to optimize the total completion time of job running in the Map
 <a name="theoretical-analysis-based-1" class="anchor" href="#theoretical-analysis-based-1"><span class="octicon octicon-link"></span></a>Theoretical Analysis based:</h3>
 
 <h3>
-<a name="heuristic-based" class="anchor" href="#heuristic-based"><span class="octicon octicon-link"></span></a>Heuristic based</h3>
+<a name="heuristic-based" class="anchor" href="#heuristic-based"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
 
 <ul>
 <li><a href="http://www.computer.org/csdl/trans/tc/preprint/06419699-abs.html">Qi Chen, Chen Liu, Zhen Xiao, "Improving MapReduce Performance Using Smart Speculative Execution Strategy," in transactions of Computer Networks.</a></li>
