--- a/index.html
+++ b/index.html
@@ -39,15 +39,18 @@
         <ul></ul>
       </nav>
       <section>
-        <p>This page includes my paper read summary for MapReduce. I will mainly talks about three important issues including:</p>
+        <blockquote>
+<p>This page includes my paper read summary for MapReduce. I will mainly talks about three important issues including:</p>
 
 <ul>
 <li><strong>Job scheduling for minimizing the total response time</strong></li>
 <li><strong>Data locality issue</strong></li>
 <li><strong>Speculative Execution</strong></li>
-</ul><p>For each issue I will make two categories which are theoretical analysis based optimization and heuristic based algorithm  design. Hope you can get something useful from this summary.</p>
+</ul>
+<p>For each issue I will make two categories which are theoretical analysis based optimization and heuristic based algorithm  design. Hope you can get something useful from this summary.</p>
+</blockquote>
 
-<h2>
+<hr><h2>
 <a name="job-scheduling" class="anchor" href="#job-scheduling"><span class="octicon octicon-link"></span></a>Job Scheduling</h2>
 
 <h3>
