--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@ Actually this paper is the follow-up work of the above paper. To be more practic
 </ul><h3>
 <a name="heuristic-based" class="anchor" href="#heuristic-based"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
 
-<p>I haven't read the paper which present heuristic-based algorithm to optimize the job completion time in MapReduce system. </p>
+<blockquote>
+<p>I haven't read any papers which present heuristic-based algorithm to optimize the job completion time in MapReduce system. </p>
+</blockquote>
 
-<h2>
+<hr><h2>
 <a name="data-locality" class="anchor" href="#data-locality"><span class="octicon octicon-link"></span></a>Data locality</h2>
 
 <h3>
@@ -85,7 +87,12 @@ Actually this paper is the follow-up work of the above paper. To be more practic
 <h3>
 <a name="heuristic-based-1" class="anchor" href="#heuristic-based-1"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
 
-<h2>
+<ul>
+<li>
+<a href="http://www.sigops.org/sosp/sosp09/papers/isard-sosp09.pdf">Michael Isard, Vijayan Prabhakaran, Jon Currey, Udi Wieder, Kunal Talwar and Andrew Goldberg, "Quincy: Fair Scheduling for Distributed Computing Clusters," in SOSP 2009.</a> This is the first paper to address the data locality issue and fairness problem in MapReduce-like systems. It encodes the scheduling as a flow network. In this network, the edge weights encode the demands of data locality and fairness. This is a very novel and beautiful work. </li>
+</ul><p>*</p>
+
+<hr><h2>
 <a name="speculative-execution" class="anchor" href="#speculative-execution"><span class="octicon octicon-link"></span></a>Speculative execution</h2>
 
 <h3>
@@ -106,7 +113,9 @@ Mantri,” in USENIX OSDI, Oct 2010.</a></li>
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<blockquote>
+<p>Having any problems with this summary, please feel free to contact <a href="http://personal.ie.cuhk.edu.hk/%7Exh112">me</a> with the email xh112[@]ie.cuhk.edu.hk. You all are welcome to show your different opinions. </p>
+</blockquote>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/hgm900611">hgm900611</a></p>
