Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@ Actually this paper is the follow-up work of the above paper. To be more practic
 <h3>
 <a name="theoretical-analysis-based-1" class="anchor" href="#theoretical-analysis-based-1"><span class="octicon octicon-link"></span></a>Theoretical Analysis based:</h3>
 
-<h3>
+<ul>
+<li>
+<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6284711&amp;tag=1">Qiaomin Xie, Yi Lu, “Degree-guided map-reduce task assignment with
+data locality constraint,” in ISIT 2012.</a> </li>
+</ul><h3>
 <a name="heuristic-based-1" class="anchor" href="#heuristic-based-1"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
 
 <ul>
