--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       </nav>
       <section>
         <blockquote>
-<p>This page includes my paper read summary for MapReduce. I will mainly talks about three important issues including:</p>
+<p> <font color=red> This page includes my paper read summary for MapReduce. I will mainly talks about three important issues including:</font></p>
 
 <ul>
 <li><strong>Job scheduling for minimizing the total response time</strong></li>
 <li><strong>Data locality issue</strong></li>
 <li><strong>Speculative Execution</strong></li>
 </ul>
-<p>For each issue I will make two categories which are theoretical analysis based optimization and heuristic based algorithm  design. Hope you can get something useful from this summary.</p>
+<p> <font color=green> For each issue I will make two categories which are theoretical analysis based optimization and heuristic based algorithm  design. Hope you can get something useful from this summary. </font> </p>
 </blockquote>
 
 <hr><h2>
