--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@ data locality constraint,” in ISIT 2012.</a> This paper presents the peeling a
 <h3>
 <a name="theoretical-analysis-based-2" class="anchor" href="#theoretical-analysis-based-2"><span class="octicon octicon-link"></span></a>Theoretical Analysis based:</h3>
 
-<h3>
+<ul>
+<li>
+<a href="http://personal.ie.cuhk.edu.hk/%7Exh112/research/forum.pdf">Huanle Xu, Wing Cheong Lau, "Resource optimization for speculative execution in a MapReduce Cluster, in ICNP PhD Forum 2013.</a>. This paper is the first work to address the backup strategy with theoretical analysis in MapReduce System. </li>
+</ul><h3>
 <a name="heuristic-based-2" class="anchor" href="#heuristic-based-2"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
 
 <ul>
