--- a/index.html
+++ b/index.html
@@ -109,18 +109,24 @@ data locality constraint,” in ISIT 2012.</a> This paper presents the peeling a
 <a name="heuristic-based-2" class="anchor" href="#heuristic-based-2"><span class="octicon octicon-link"></span></a>Heuristic based:</h3>
 
 <ul>
-<li><p><a href="http://www.computer.org/csdl/trans/tc/preprint/06419699-abs.html">Qi Chen, Chen Liu, Zhen Xiao, "Improving MapReduce Performance Using Smart Speculative Execution Strategy," in transactions of Computer Networks.</a></p></li>
+<li><p><a href="http://research.google.com/archive/mapreduce-osdi04.pdf">J. Dean and S. Ghemawat, “MapReduce: Simplified Data Processing on
+Large Clusters”, in USENIX OSDI, 2004</a></p></li>
+<li><p><a href="http://bnrg.eecs.berkeley.edu/%7Erandy/Courses/CS268.F08/papers/42_osdi_08.pdf">M. Zaharia, A. Konwinski, A. D. Joseph, R. Katz, and I. Stoica,
+“Improving mapreduce performance in heterogeneous environments,” in OSDI 2008.</a></p></li>
 <li><p><a href="http://www.usenix.org/legacy/event/osdi10/tech/full_papers/Ananthanarayanan.pdf">G. Ananthanarayanan, S. Kandula, A. Greenberg, I. Stoica, Y. Lu, B.
 Saha, E. Harris, “Reining in the Outliers in MapReduce Clusters using
 Mantri,” in USENIX OSDI, Oct 2010.</a></p></li>
-<li><p><a href="http://bnrg.eecs.berkeley.edu/%7Erandy/Courses/CS268.F08/papers/42_osdi_08.pdf">M. Zaharia, A. Konwinski, A. D. Joseph, R. Katz, and I. Stoica,
-“Improving mapreduce performance in heterogeneous environments,” in OSDI 2008.</a></p></li>
-</ul><h3>
+<li>
+<p><a href="http://www.computer.org/csdl/trans/tc/preprint/06419699-abs.html">Qi Chen, Chen Liu, Zhen Xiao, "Improving MapReduce Performance Using Smart Speculative Execution Strategy," in transactions of Computer Networks 2013.</a></p>
+
+<h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <blockquote>
 <p>Having any problems with this summary, please feel free to contact <a href="http://personal.ie.cuhk.edu.hk/%7Exh112">me</a> with the email xh112[@]ie.cuhk.edu.hk. You all are welcome to show your different opinions. </p>
 </blockquote>
+</li>
+</ul>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/hgm900611">hgm900611</a></p>
