--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@ data locality constraint,” in ISIT 2012.</a> This paper presents the peeling a
 
 <ul>
 <li><p><a href="http://research.google.com/archive/mapreduce-osdi04.pdf">J. Dean and S. Ghemawat, “MapReduce: Simplified Data Processing on
-Large Clusters”, in USENIX OSDI, 2004</a></p></li>
+Large Clusters”, in USENIX OSDI, 2004</a>
+Actually, this paper is the technical report to the MapReduce system design of Google. It talks about the back up strategy with a very short  do backups when a MapReduce operation is close to complete and shows that
+speculative execution can decrease the job execution time by 44%.</p></li>
 <li><p><a href="http://bnrg.eecs.berkeley.edu/%7Erandy/Courses/CS268.F08/papers/42_osdi_08.pdf">M. Zaharia, A. Konwinski, A. D. Joseph, R. Katz, and I. Stoica,
 “Improving mapreduce performance in heterogeneous environments,” in OSDI 2008.</a></p></li>
 <li><p><a href="http://www.usenix.org/legacy/event/osdi10/tech/full_papers/Ananthanarayanan.pdf">G. Ananthanarayanan, S. Kandula, A. Greenberg, I. Stoica, Y. Lu, B.
